CDH-37102 Use default HBase profile in precommit
Change-Id: I73c1a0a66e78ead431b8e7392cd5e2d9d4713fcf
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/10896
Tested-by: jenkins
Reviewed-by: Wolfgang Hoschek <whoschek@cloudera.com>
Reviewed-by: Greg Chanan <gchanan@cloudera.com>